--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
 						<!-- <h2 class="d-flex" style="margin-bottom: 0">With over 5 years of experience</h2> -->
 						<!-- <br> -->
 			            <p><a href="https://drive.google.com/file/d/1reCelWjLYHe5oHsM4AFS21ct_jsrU4Z9/view?usp=sharing" class="btn btn-primary py-3 px-4">Download CV</a> 
-							<a href="https://github.com/rishabhnmishra" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
+							<a href="https://github.com/dashboard" class="btn btn-white btn-outline-white py-3 px-4">My works</a></p>
 		            </div>
 		          </div>
 	        	</div>
